syntax = "proto3";

import "google/protobuf/empty.proto";
package PrivateStorage;

option go_package = "github.com/weeber-id/weeber_storage-server-grpc/protobuf/PrivateStorage";

message File {
  string projectname = 1;
  string objectname = 2;
  message Option {
    string contentType = 1;
  }
  Option option = 3;
  bytes file = 4;
}

message FileLocation {
  string location = 2;
}

service PrivateStorage {
  rpc Upload (File) returns (FileLocation);
  rpc Download (FileLocation) returns (File);
  rpc Delete (FileLocation) returns (google.protobuf.Empty); 
}